@@ -12,6 +12,7 @@
 	- Show backend error message(s) when on failed project add
 	- Update Growl framework to version 1.3.1: A separate Growl 
 	  is no longer needed and ready for Mountain Lion's notifications
+	- Monochrome appindicator icons on Ubuntu
 
 	Travis:
 	- Rewrote the notification service, now more robust and reliable
